<resources>
    <string name="app_name">My Plants</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="username_icon">Username Icon</string>
    <string name="password_icon">Password Icon</string>
    <string name="signup">Sign Up</string>
    <string name="all_plant">All Plant</string>
    <string name="my_plants">My Plants</string>
    <string name="add_plant">Add Plant</string>
    <string name="search">Search</string>
    <string name="plant_name">Plant Name</string>
    <string name="water_cycle">Water Cycle</string>
    <string name="description">Description</string>
    <string name="cabbage">Cabbage</string>
    <string name="water_cycle_hint">Every 2 days</string>
    <string name="plant_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean auctor tortor non sodales porta. Pellentesque aliquam elit sed ex laoreet pulvinar. Vestibulum condimentum lobortis ullamcorper. Vestibulum odio est, malesuada at lorem vitae, tincidunt faucibus nisl. Mauris eu ligula diam. Aenean facilisis magna magna, eget facilisis est sodales a. Cras venenatis efficitur dolor ac lobortis. Nunc cursus metus lorem, et lobortis augue varius in. Nam eu enim non massa pretium gravida. Proin feugiat fringilla porttitor. Donec risus ligula, tincidunt nec mauris nec, ultricies venenatis nisi.</string>
    <string name="plant_image">Plant Image</string>
    <string name="favorite_icon">Favorite Icon</string>
    <string name="edit_icon">Edit Icon</string>
    <string name="delete_icon">Delete Icon</string>
    <string name="back">Back</string>
    <string name="add_public_plant">Add Public Plant</string>
    <string name="plant_description_text">Plant Description</string>
    <string name="notes">Notes</string>
    <string name="watering_start">Watering Start</string>
    <string name="watering_cycle">Watering Cycle</string>
    <string name="fertilize_start">Fertilize Start</string>
    <string name="fertilize_cycle">Fertilize Cycle</string>
    <string name="add_user_plant">Add User Plant</string>
    <string name="watering_cycle_view">Watering Cycle: </string>
    <string name="value">Value</string>
    <string name="fertilizing_cycle_view">Fertilizing Cycle: </string>
</resources>