<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/plant_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:padding="12dp"
            android:src="@drawable/image_not_found"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            android:contentDescription="@string/plant_image"/>

        <TextView
            android:id="@+id/plant_name"
            android:text="@string/plant_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/plant_image"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintVertical_bias="0.2"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/plant_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            android:layout_marginEnd="12dp"
            app:layout_constraintVertical_bias="0.1">

            <ImageView
                android:id="@+id/favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/favorite_icon"
                android:visibility="gone"
                android:contentDescription="@string/favorite_icon"/>

            <ImageView
                android:id="@+id/edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/edit_icon"
                android:visibility="gone"
                android:contentDescription="@string/edit_icon"/>

            <ImageView
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/delete_icon"
                android:visibility="gone"
                android:contentDescription="@string/delete_icon"/>

        </LinearLayout>

        <TextView
            android:id="@+id/plant_description"
            android:layout_width="275dp"
            android:layout_height="50dp"
            android:maxLines="3"
            android:text="@string/plant_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/plant_image"
            app:layout_constraintTop_toBottomOf="@id/plant_name"
            app:layout_constraintVertical_bias="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>