<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary">

    <ImageView
        android:id="@+id/textViewAddPlantTitle"
        android:layout_width="match_parent"
        android:layout_height="265dp"
        android:src="@drawable/add_public"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/add_public_plant"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.45"
        app:layout_constraintWidth_percent="0.8">

        <EditText
            android:id="@+id/editTextPlantName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@null"
            android:hint="@string/plant_name"
            android:importantForAutofill="no"
            android:inputType="text" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_margin="6dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.7"
        app:layout_constraintWidth_percent="0.8">

        <EditText
            android:id="@+id/editTextPlantDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@null"
            android:hint="@string/plant_description_text"
            android:gravity="top"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            tools:ignore="LabelFor"
            android:padding="8dp"
            android:scrollbars="vertical"/>
    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/buttonAddPlant"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_public_plant"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintVertical_bias="0.9"/>


</androidx.constraintlayout.widget.ConstraintLayout>